# matrix-multiply-pybind

./: CMakeLists.txt  README.md
Src/: CMakeLists.txt
Src/matrix_multiply/: CMakeLists.txt  mm.cu  pybind11mm.cpp
py_src/: python_pybind.py
